--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "viem": "^2",
     "wagmi": "^2"
   },
-  "devDependencies": {
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
+  "dependencies": {
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
@@ -39,7 +45,7 @@
     "typescript": "^5.5.3",
     "vite": "^5.3.1"
   },
-  "dependencies": {
+  "devDependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
