--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "wagmi-wallet-ui",
-  "private": true,
-  "version": "0.0.1",
+  "version": "0.1.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -25,6 +24,12 @@
       "import": "./dist/index.js"
     }
   },
+  "types": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@types/node": "^20.14.11",
