--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wagmi-wallet-ui",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,12 +9,10 @@
     "vite:build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "vite:preview": "vite preview",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "peerDependencies": {
     "@tanstack/react-query": "^5",
-    "react": "^18",
-    "react-dom": "^18",
     "viem": "^2",
     "wagmi": "^2"
   },
@@ -31,6 +29,8 @@
     "dist"
   ],
   "dependencies": {
+    "react": "^18",
+    "react-dom": "^18",
     "@rainbow-me/rainbowkit": "^2.1.3",
     "@types/node": "^20.14.11",
     "@types/react": "^18.3.3",
@@ -51,6 +51,7 @@
     "vite": "^5.3.1"
   },
   "devDependencies": {
+    "@uidotdev/usehooks": "^2.4.1",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-label": "^2.1.0",
